src/objects/Hour_Template__c.object
<CustomObject>
    <description>Time Tracking App Object</description>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week_Day__c</fullName>
        <label>Week Day</label>
        <picklist>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Week_Template__c</fullName>
        <label>Week Template</label>
        <referenceTo>Week_Template__c</referenceTo>
        <relationshipLabel>Week Templates</relationshipLabel>
        <relationshipName>Week_Template</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Hour Template</label>
    <nameField>
        <displayFormat>HTL-{0000000}</displayFormat>
        <label>Hour Template Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hour Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>